# UniversityProgressionCalculator

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  RobotoBlack.h  UniversityProgressionCalculator.cpp  UniversityProgressionCalculator.h  image_to_byte_array.py  imguiStyle.h  keyInformation.h  module.cpp  module.h  progression.json  progressionTree.cpp  progressionTree.h  saveLoadJson.h  term.cpp  term.h  window.h  year.cpp  year.h
data/: data.json
progressionData/: progressionData.json
userData/: default.json  userData.json
